// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`outlets > using index elements 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      <div>
        Layout
      </div>
      <div>
        Index
      </div>
    </div>
  </div>
</div>
`;

exports[`outlets > using next layout elements 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      <div>
        Layout
      </div>
      <div>
        <div>
          Next layout
        </div>
      </div>
    </div>
  </div>
</div>
`;
